lab3 added GetProductsServletTest